--- a/final_proj_style.css
+++ b/final_proj_style.css
@@ -215,3 +215,22 @@ h1 {
 .dumping {
   margin:none;
 }
+}
+#menu_trigger {
+  display: none;
+
+}
+@media screen and (max-width: 600px) {
+  #menu_trigger {
+    display:block;
+    position: absolute;
+    top: 5px;
+    left: 0px;
+  }
+  #menu_nav {
+    display: none;
+  }
+  .menu {
+    flex-direction: column;
+  }
+}
