--- a/final_proj_style.css
+++ b/final_proj_style.css
@@ -5,8 +5,8 @@ body {
   font-size: 25px;
   font-family: "Catamaran",sans-serif;
   font-weight: 400;
-  margin-top: 50px;
-}
+  margin: 50px 0px 0px 0px;
+  }
 h1 {
   font-size: 85px;
   font-family:"Hammersmith One", serif;
